# dali-examples

./: .gitignore  .gitmodules  CMakeLists.txt
data/amazon_reviews/: generate.py
data/lm1b/: generate.py
data/mnist/: generate.py
examples/: api_showcase.cpp  argparse_utils.py  bert_pytorch.py  bert_tf.py  bert_training.cpp  config.h.in  half2float.h  mnist_training.cpp  mnist_training_pytorch.py  mnist_training_tf.py  onnx_attribute.cpp  onnx_attribute.h  onnx_load.cpp  run_many_confs.py  sentiment_neuron_pytorch.py  sentiment_neuron_tf.py  sentiment_neuron_training.cpp  small_fc.cpp  sparse_lstm_sentiment.cpp  utils.cpp  utils.h
